# MPCC_manipulator

./: .gitignore  README.md
cpp/: CMakeLists.txt  install.sh
cpp/NNmodel/: self_collision.pkl
cpp/NNmodel/backup/parameter/: bias_0.txt  bias_1.txt  bias_2.txt  bias_3.txt  weight_0.txt  weight_1.txt  weight_2.txt  weight_3.txt
cpp/NNmodel/parameter/: bias_0.txt  bias_1.txt  bias_2.txt  bias_3.txt  weight_0.txt  weight_1.txt  weight_2.txt  weight_3.txt
cpp/Params/: bounds.json  config.json  cost.json  model.json  normalization.json  sqp.json  track.json  track.py
cpp/cmake/: FindRBDL.cmake
cpp/include/: config.h  types.h
cpp/include/Constraints/: bounds.h  constraints.h
cpp/include/Constraints/EnvCollision/: EnvCollisionModel.h
cpp/include/Constraints/SelfCollision/: SelfCollisionModel.h
cpp/include/Cost/: cost.h
cpp/include/Interfaces/: osqp_interface.h  solver_interface.h
cpp/include/MPC/: mpc.h
cpp/include/Model/: integrator.h  model.h  robot_data.h  robot_model.h
cpp/include/Params/: params.h  track.h
cpp/include/Spline/: arc_length_spline.h  cubic_spline.h  cubic_spline_rot.h
cpp/include/Tests/: constraints_test.h  cost_test.h  model_integrator_test.h  robot_model_test.h  self_collision_test.h  spline_test.h
cpp/src/: MPCC_wrapper.cpp  MPC_wrapper.cpp  main.cpp  types.cpp
cpp/src/Constraints/: bounds.cpp  constraints.cpp
cpp/src/Constraints/EnvCollision/: EnvCollisionModel.cpp
cpp/src/Constraints/SelfCollision/: SelfCollisionModel.cpp
cpp/src/Cost/: cost.cpp
cpp/src/Interfaces/: osqp_interface.cpp
cpp/src/MPC/: mpc.cpp
cpp/src/Model/: integrator.cpp  model.cpp  robot_model.cpp
cpp/src/Params/: params.cpp  track.cpp
cpp/src/Spline/: arc_length_spline.cpp  cubic_spline.cpp  cubic_spline_rot.cpp
cpp/urdf/: tocabi.urdf
python/: bo_mpcc.ipynb  main.py  main_utils.py  main_w_isaac.py  main_w_mujoco.py  main_w_sim.py  simulation.py  splined_path.txt
python/MPC/: MPC.py  __init__.py  robot_model.py  self_collision_nn.py
python/MPCC/: MPCC.py  __init__.py  env_collision_nn.py  integrator.py  robot_model.py  self_collision_nn.py  utils.py
python/TTMPC/: TTMPC.py  __init__.py  env_collision_nn.py  integrator.py  self_collision_nn.py  utils.py
python/mpcc/: __init__.py  mpcc.py  self_collision_nn.py
